<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/RL11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/secoro"
                android:focusableInTouchMode="true"
                tools:context="com.sincro.allup.reporte">


    <TextView
        android:id="@+id/TXV11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:background="@android:color/transparent"
        android:text="@string/Usuar1"
        android:textColor="@color/NaranjaSuave"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TXV20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/RLL11"
        android:layout_alignTop="@+id/TXV11"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/TXV36"
        android:layout_marginEnd="6dp"
        android:text="25"
        android:textAlignment="center"
        android:textColor="@color/Amarillo"
        android:textSize="40sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/TXV36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/TXV20"
        android:layout_weight="1"
        android:text="Reporte"
        android:textAlignment="center"
        android:textSize="10sp"/>

    <LinearLayout
        android:id="@+id/RLL11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TXV11"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TXV13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/Linea"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/TXV14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/Estacion"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SPNN11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:visibility="visible"
                tools:ignore="NestedWeights" />

            <Spinner
                android:id="@+id/SPNN12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/RLL12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RLL11"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TXV15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/Seccion"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="NestedWeights"/>

            <TextView
                android:id="@+id/TXV16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/Area"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SPNN13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:visibility="visible"
                tools:ignore="NestedWeights"/>

            <Spinner
                android:id="@+id/SPNN14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:visibility="visible"/>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/EDT1"
        android:layout_width="fill_parent"
        android:layout_height="70dp"

        android:layout_below="@+id/RLL12"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"

        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:gravity="top|left"
        android:hint="Observaciones"
        android:inputType="none|text|textMultiLine"
        android:paddingStart="3dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/LLHH31"
        android:layout_below="@+id/EDT1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LLHH30A"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/BTNCAMERA1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/camarita"/>


            <ImageButton
                android:id="@+id/BTNCAMERA2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/archivito"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLHH30B"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/BTNCAMERA3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/camarita_b"/>

            <ImageButton
                android:id="@+id/BTNCAMERA4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/archivito_b"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLHH31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BTN33"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/Cancelar"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/BTN22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/Enviar"
            android:textSize="14sp"/>
    </LinearLayout>

    <ProgressBar

        android:id="@+id/progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:elevation="10dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/BeloAzul"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="5dp"
        android:visibility="invisible"
        app:srcCompat="@color/beloAzul" />

</RelativeLayout>
